--- a/.github/workflows/rename_template_project_commit.yml
+++ b/.github/workflows/rename_template_project_commit.yml
@@ -15,7 +15,7 @@ jobs:
         run: rm .github/workflows/rename_template_project.yml
 
       - name: Commit changes
-      - run: |
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
