DT-1546: ⬆️ Application insights v3

--- a/helm_deploy/hmpps-template-kotlin/templates/secrets.yaml
+++ b/helm_deploy/hmpps-template-kotlin/templates/secrets.yaml
@@ -6,4 +6,6 @@ metadata:
     {{- include "app.labels" . | nindent 4 }}
 type: Opaque
 data:
-  APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.secrets.APPINSIGHTS_INSTRUMENTATIONKEY | b64enc | quote }}
+  {{- range $key, $value := .Values.secrets }}
+  {{ $key }}: {{ $value | b64enc | quote }}
+  {{- end }}
