--- a/helm_deploy/hmpps-template-kotlin/Chart.yaml
+++ b/helm_deploy/hmpps-template-kotlin/Chart.yaml
@@ -1,5 +1,10 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
 name: hmpps-template-kotlin
 version: 0.1.0
+
+dependencies:
+  - name: generic-service
+    version: 1.0.5
+    repository: https://ministryofjustice.github.io/hmpps-helm-charts
