--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -1,28 +1,8 @@
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+---
+# Per environment values which override defaults in hmpps-template-kotlin/values.yaml
 
-replicaCount: 2
+generic-service:
+  replicaCount: 2
 
-image:
-  repository: quay.io/hmpps/hmpps-template-kotlin
-  tag: latest
-  port: 8080
-
-ingress:
-  enabled: true
-  enable_whitelist: true
-  hosts:
-    - host: hmpps-template-kotlin-dev.hmpps.service.justice.gov.uk
-      cert_secret: hmpps-template-kotlin-cert
-  path: /
-
-env:
-  JAVA_OPTS: "-Xmx512m"
-
-whitelist:
-  office: "217.33.148.210/32"
-  health-kick: "35.177.252.195/32"
-  mojvpn: "81.134.202.29/32"
-  cloudplatform-live1-1: "35.178.209.113/32"
-  cloudplatform-live1-2: "3.8.51.207/32"
-  cloudplatform-live1-3: "35.177.252.54/32"
+  ingress:
+    host: hmpps-template-kotlin-dev.hmpps.service.justice.gov.uk
