DT-1738 - veracode pipeline scan job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,4 +92,7 @@ workflows:
       - hmpps/veracode_pipeline_scan:
           context:
             - hmpps-common-vars
+      - hmpps/veracode_pipeline_scan:
+          context:
+            - hmpps-common-vars
 
