Revert "DT-2253: ⬆️ Upgrade spring boot / kotlin (#49)"
This reverts commit 00f0ac5b32e0984072b6574604c634df0193d2c3.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@3.6
+  hmpps: ministryofjustice/hmpps@3.5
 
 parameters:
   alerts-slack-channel:
@@ -80,6 +80,7 @@ workflows:
 #      - hmpps/deploy_env:
 #          name: deploy_prod
 #          env: "prod"
+#          show_changelog: true
 #          slack_notification: true
 #          slack_channel_name: << pipeline.parameters.releases-slack-channel >>
 #          context:
