SDI-45: 🔨 Add in preprod and prod and tidy

--- a/.gitignore
+++ b/.gitignore
@@ -64,8 +64,9 @@ dist
 
 # AWS DOcker build
 ecr.repo
-/dps-gradle-spring-boot-suppressions.xml
+dps-gradle-spring-boot-suppressions.xml
 .editorconfig
+sonar-project.properties
 
 #Helm
 **/Chart.lock
