--- a/helm_deploy/hmpps-template-kotlin/values.yaml
+++ b/helm_deploy/hmpps-template-kotlin/values.yaml
@@ -11,9 +11,10 @@ generic-service:
 
   ingress:
     enabled: true
+    v1_2_enabled: true
+    v0_47_enabled: false
     host: app-hostname.local    # override per environment
     tlsSecretName: hmpps-template-kotlin-cert
-    contextColour: green
 
   # Environment variables to load into the deployment
   env:
