SDIT-405: ⬆️ Upgrade to spring boot 3

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -2,6 +2,8 @@
 # Per environment values which override defaults in hmpps-template-kotlin/values.yaml
 
 generic-service:
+  replicaCount: 2
+
   ingress:
     host: hmpps-template-kotlin-preprod.hmpps.service.justice.gov.uk
 
