Include JDK tag to fix gradle_owasp_dependency_check job
It failed https://app.circleci.com/pipelines/github/ministryofjustice/hmpps-template-kotlin/1240/workflows/22be3d2e-9a67-469b-a7c0-e6975d92bac6/jobs/2971

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,7 @@ workflows:
           slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
             - hmpps-common-vars
+          jdk_tag: "19.0"
       - hmpps/trivy_latest_scan:
           slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
