HEAT-106: update product id to not be null

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         - "stdout"
 
 application:
-  product-id: ${productId:default}
+  productId: ${productId:default}
 
 server:
   port: 8080
