--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,10 @@ orbs:
 parameters:
   alerts-slack-channel:
     type: string
-    default: dps_alerts_security
+    default: PIPELINE_SECURITY_SLACK_CHANNEL
   releases-slack-channel:
     type: string
-    default: dps-releases
+    default: SLACK_RELEASES_CHANNEL
 
 jobs:
   validate:
