--- a/.github/workflows/rename_template_project_pr.yml
+++ b/.github/workflows/rename_template_project_pr.yml
@@ -1,15 +1,33 @@
 name: rename-project-create-pr
 
-on: [workflow_dispatch]
+on:
+  workflow_dispatch:
+    inputs:
+      slack_releases_channel:
+        description: 'Slack channel for release notifications.'
+        required: true
+        default: ''
+      pipeline_security_slack_channel:
+        description: 'Slack channel for pipeline security notifications.'
+        required: true
+        default: ''
+      non_prod_alerts_prometheus_severity_label:
+        description: 'Non-prod k8s alerts. The severity label used by prometheus to route alert notifications to slack. See cloud-platform user guide.'
+        required: true
+        default: 'digital-prison-service-dev'
+      prod_alerts_prometheus_severity_label:
+        description: 'Production k8s alerts. The severity label used by prometheus to route alert notifications to slack. See cloud-platform user guide.'
+        required: true
+        default: 'digital-prison-service'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Run rename-project script
-        run: ./rename-project.bash ${{ github.event.repository.name }}
+        run: ./rename-project.bash ${{ github.event.repository.name }} ${{ inputs.slack_releases_channel }} ${{ inputs.pipeline_security_slack_channel }} ${{ inputs.non_prod_alerts_prometheus_severity_label }} ${{ inputs.prod_alerts_prometheus_severity_label }}
 
       - name: Delete this github actions workflow
         run: rm .github/workflows/rename_template_project*
