--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -5,6 +5,9 @@ generic-service:
   ingress:
     host: hmpps-template-kotlin.hmpps.service.justice.gov.uk
 
+  env:
+    API_BASE_URL_OAUTH: "https://sign-in.hmpps.service.justice.gov.uk/auth"
+
 # CloudPlatform AlertManager receiver to route prometheus alerts to slack
 # See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
 generic-prometheus-alerts:
