SDIT-1336 Use web client and health ping helpers from the kotlin lib

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,12 +17,12 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: ${api.base.url.oauth}/.well-known/jwks.json
+          jwk-set-uri: ${api.base.url.hmpps-auth}/.well-known/jwks.json
 
       client:
         provider:
           hmpps-auth:
-            token-uri: ${api.base.url.oauth}/oauth/token
+            token-uri: ${api.base.url.hmpps-auth}/oauth/token
 # TODO this provides a template for registering client credentials - only add prison-api if you need it
 #        registration:
 #          prison-api:
