--- a/helm_deploy/hmpps-template-kotlin/values.yaml
+++ b/helm_deploy/hmpps-template-kotlin/values.yaml
@@ -30,6 +30,9 @@ generic-service:
   namespace_secrets:
     hmpps-template-kotlin:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
+      # Example client registration secrets
+      TEMPLATE_KOTLIN_API_CLIENT_ID: "TEMPLATE_KOTLIN_API_CLIENT_ID"
+      TEMPLATE_KOTLIN_API_CLIENT_SECRET: "TEMPLATE_KOTLIN_API_CLIENT_SECRET"
 
   allowlist:
     groups:
