--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,15 @@ spring:
           hmpps-auth:
             token-uri: ${hmpps-auth.url}/oauth/token
 
+        registration:
+          # example client registration for calling out to other services
+          template-kotlin-api:
+            provider: hmpps-auth
+            client-id: ${template-kotlin-api.client.id}
+            client-secret: ${template-kotlin-api.client.secret}
+            authorization-grant-type: client_credentials
+            scope: read
+
 server:
   port: 8080
   servlet:
