--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -3,13 +3,13 @@
 
 generic-service:
   ingress:
-    host: hmpps-template-kotlin.hmpps.service.justice.gov.uk
+    host: template-kotlin.hmpps.service.justice.gov.uk
 
   env:
     HMPPS_AUTH_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
     # Template kotlin calls out to itself to provide an example of a service call
     # This should be replaced by a call to a different service, or removed
-    TEMPLATE_KOTLIN_API_URL: "https://hmpps-template-kotlin.hmpps.service.justice.gov.uk"
+    TEMPLATE_KOTLIN_API_URL: "https://template-kotlin.hmpps.service.justice.gov.uk"
 
 # CloudPlatform AlertManager receiver to route prometheus alerts to slack
 # See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
