--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -11,8 +11,8 @@ generic-service:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: "applicationinsights.dev.json"
     HMPPS_AUTH_URL: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth"
     # Template kotlin calls out to itself to provide an example of a service call
-    # This should be replaced by a call to a different service, or removed
-    TEMPLATE_KOTLIN_API_URL: "https://template-kotlin-preprod.hmpps.service.justice.gov.uk"
+    # TODO: This should be replaced by a call to a different service, or removed
+    EXAMPLE_API_URL: "https://template-kotlin-preprod.hmpps.service.justice.gov.uk"
 
 # CloudPlatform AlertManager receiver to route prometheus alerts to slack
 # See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
