--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,31 +64,24 @@ jobs:
     name: Validate the kotlin
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/kotlin_validate.yml@main
     secrets: inherit
-  create_app_version:
-    name: Create app version
-    needs: 
-      - kotlin_validate
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/create_app_version.yml@main    
   build:
     name: Build docker image from hmpps-github-actions
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@main
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@move_create_app_version_in_action
     needs:
-      - create_app_version
+      - kotlin_validate
     with:
       docker_registry: ${{ inputs.docker_registry || 'ghcr.io' }}
       registry_org: ${{ inputs.registry_org || 'ministryofjustice' }}
       additional_docker_tag: ${{ inputs.additional_docker_tag }}
       push: ${{ inputs.push || true }}
       docker_multiplatform: ${{ inputs.docker_multiplatform || true }}
-      app_version: ${{ needs.create_app_version.outputs.version }}
   deploy_dev:
     name: Deploy to dev environment
     needs: 
-      - create_app_version
       - build
       - helm_lint
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@main
     secrets: inherit
     with:
       environment: 'dev'
-      app_version: '${{ needs.create_app_version.outputs.version }}'
+      app_version: '${{ needs.build.outputs.app_version }}'
