--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,7 +66,7 @@ jobs:
     secrets: inherit
   build:
     name: Build docker image from hmpps-github-actions
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@move_create_app_version_in_action
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@main
     needs:
       - kotlin_validate
     with:
