--- a/.github/workflows/security_trivy.yml
+++ b/.github/workflows/security_trivy.yml
@@ -2,7 +2,7 @@ name: Security trivy dependency check
 on:
   workflow_dispatch:
   schedule:
-    - cron: "19 6 * * MON-FRI" # Every weekday at 06:19 UTC
+    - cron: "19 6 * * MON-FRI" # Every weekday
 jobs:
   security-kotlin-trivy-check:
     name: Project security trivy dependency check
