--- a/.github/workflows/security_veracode_policy_scan.yml
+++ b/.github/workflows/security_veracode_policy_scan.yml
@@ -2,7 +2,7 @@ name: Security veracode policy scan
 on:
   workflow_dispatch:
   schedule:
-    - cron: "34 6 * * 1" # Every Monday at 06:34 UTC
+    - cron: "34 6 * * 1" # Every Monday
 jobs:
   security-veracode-policy-check:
     name: Project security veracode policy scan
