--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,8 +3,8 @@ name: Pipeline [Test - Build - Deploy]
 on:
   push:
     branches:
-      # - main
-      - '**'
+      - main
+      # - '**'
 
   workflow_dispatch:
     inputs:
