--- a/.github/workflows/security_trivy.yml
+++ b/.github/workflows/security_trivy.yml
@@ -8,5 +8,5 @@ jobs:
     name: Project security trivy dependency check
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/security_trivy.yml@v0.7 # WORKFLOW_VERSION
     with:
-      channel_id: SECURITY_ALERTS_SLACK_CHANNEL_ID
+      channel_id: C05J915DX0Q
     secrets: inherit
