--- a/.github/workflows/security_veracode_policy_scan.yml
+++ b/.github/workflows/security_veracode_policy_scan.yml
@@ -8,5 +8,5 @@ jobs:
     name: Project security veracode policy scan
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/security_veracode_policy_scan.yml@v0.7 # WORKFLOW_VERSION
     with:
-      channel_id: SECURITY_ALERTS_SLACK_CHANNEL_ID
+      channel_id: C05J915DX0Q
     secrets: inherit
