run on all branches but only build (and deploy) on main

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,8 +3,7 @@ name: Pipeline [test -> build -> deploy]
 on:
   push:
     branches:
-      - main
-      # - '**'
+      - '**'
 
   workflow_dispatch:
     inputs:
@@ -66,6 +65,7 @@ jobs:
     secrets: inherit
   build:
     name: Build docker image from hmpps-github-actions
+    if: github.ref == 'refs/heads/main'
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@v1 # WORKFLOW_VERSION
     needs:
       - kotlin_validate
