--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,7 +56,7 @@ permissions:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 # This will cancel all running build/test/release pipelines that are not on the main branch
-# Any pipelines on the main branch will wait until existing runs complete
+# If this pipeline is on the main branch, it will wait until existing runs complete
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
